tests/ui/type-alias-impl-trait/no_inferrable_concrete_type.stderr
error: item does not constrain `Foo::{opaque#0}`
  --> $DIR/no_inferrable_concrete_type.rs:10:8
   |
LL | pub fn bar(x: Foo) -> Foo {
   |        ^^^
   |
   = note: consider removing `#[define_opaque]` or adding an empty `#[define_opaque()]`
note: this opaque type is supposed to be constrained
  --> $DIR/no_inferrable_concrete_type.rs:6:16
   |
LL | pub type Foo = impl Copy;
   |                ^^^^^^^^^

error: aborting due to 1 previous error

